syntax = "proto3";

option csharp_namespace = "grpc.basico.server";

import "google/protobuf/empty.proto";

package Sensor;

service SensorService {

  rpc GetSensorData (SensorRequest) returns (SensorResponse);

  rpc GetAllData (google.protobuf.Empty) returns (stream SensorResponse);

  rpc AddPhoto (stream AddPhotoRequest) returns (AddPhotoResponse);

  rpc AddNewSensor (stream SensorAddRequest) returns (stream SensorResponse);

}

message SensorRequest {
  int32 sensor_id = 1;
}

message SensorResponse {
	Sensor sensor = 1;
}

message SensorAddRequest {
	Sensor sensor = 1;
}

message Sensor {
  int32 id = 1;
  double position_x  = 2;
  double position_y = 3;
  double temperature = 4;
}

message AddPhotoRequest {
  bytes data = 1;
}
message AddPhotoResponse {
  bool isOk = 1;
}

